--- a/d3-bar-graph.html
+++ b/d3-bar-graph.html
@@ -7,9 +7,7 @@ Copyright (c) 2015 Tux Authors
 <link rel="import" href="d3-bar-graph-behavior.html">
 <dom-module id="d3-bar-graph">
   <link rel="import" type="css" href="d3-bar-graph.css">
-  <template>
-      <div>This would generate the bar graph</div>
-  </template>
+  <template></template>
   <script>
   (function() {
     // initialize anything common to all instances here
